--- a/app/src/main/res/values/preloaded_fonts.xml
+++ b/app/src/main/res/values/preloaded_fonts.xml
@@ -7,5 +7,8 @@
         <item>@font/montserrat_light</item>
         <item>@font/montserrat_medium</item>
         <item>@font/montserrat_semibold</item>
+        <item>@font/roboto</item>
+        <item>@font/roboto_bold</item>
+        <item>@font/roboto_medium</item>
     </array>
 </resources>
